--- a/extras/wezterm/themes/dark/oasis_dune_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_dune_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#E8E5DA"
 background= "#2E2620"
-cursor_bg= "#F0E68C"
-cursor_border= "#F0E68C"
-cursor_fg= "#3C332C"
-selection_bg= "#335668"
-selection_fg= "#3C332C"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#2E2620"
+selection_bg= "#5A3824"
+selection_fg= "#E8E5DA"
 split= "#BDB76B"
 compose_cursor= "#FFA247"
 scrollbar_thumb= "#534A3F"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#534A3F'
-fg_color = '#2E2620'
+fg_color = '#BDB76B'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#3C332C'
-fg_color = '#2E2620'
+bg_color = '#534A3F'
+fg_color = '#A7D3A9'
 intensity = 'Normal'
 italic = false
 strikethrough = false
