--- a/extras/wezterm/themes/dark/oasis_mirage_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_mirage_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#DDEFEF"
 background= "#18252A"
-cursor_bg= "#96D4CB"
-cursor_border= "#96D4CB"
-cursor_fg= "#1A2D33"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#18252A"
 selection_bg= "#5A3824"
-selection_fg= "#1A2D33"
+selection_fg= "#18252A"
 split= "#5ABAAE"
 compose_cursor= "#FFA247"
 scrollbar_thumb= "#2A3F46"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#2A3F46'
-fg_color = '#18252A'
+fg_color = '#5ABAAE'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#1A2D33'
-fg_color = '#18252A'
+bg_color = '#2A3F46'
+fg_color = '#FFA247'
 intensity = 'Normal'
 italic = false
 strikethrough = false
