--- a/extras/wezterm/themes/dark/oasis_rose_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_rose_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#EDD5E7"
 background= "#301828"
-cursor_bg= "#FFA0A0"
-cursor_border= "#FFA0A0"
-cursor_fg= "#3E2636"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#301828"
 selection_bg= "#5A3824"
-selection_fg= "#3E2636"
+selection_fg= "#EDD5E7"
 split= "#FFA0A0"
 compose_cursor= "#F49F15"
 scrollbar_thumb= "#523A4B"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#523A4B'
-fg_color = '#301828'
+fg_color = '#FFA0A0'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#3E2636'
-fg_color = '#301828'
+bg_color = '#523A4B'
+fg_color = '#F4E36B'
 intensity = 'Normal'
 italic = false
 strikethrough = false
