--- a/extras/wezterm/themes/light/1/oasis_canyon_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_canyon_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#665137"
 background= "#f9f7f5"
-cursor_bg= "#954f10"
-cursor_border= "#954f10"
-cursor_fg= "#f3efeb"
-selection_bg= "#e8e0d8"
-selection_fg= "#f3efeb"
+cursor_bg = "#954f10"
+cursor_border = "#954f10"
+cursor_fg= "#f9f7f5"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#794a1c"
 compose_cursor= "#5f5521"
 scrollbar_thumb= "#e8e0d8"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8e0d8'
-fg_color = '#665137'
+fg_color = '#a25307'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f3efeb'
-fg_color = '#665137'
+bg_color = '#e8e0d8'
+fg_color = '#1f7294'
 intensity = 'Normal'
 italic = false
 strikethrough = false
