--- a/extras/wezterm/themes/light/1/oasis_lagoon_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_lagoon_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#40577a"
 background= "#f9fafb"
-cursor_bg= "#1665aa"
-cursor_border= "#1665aa"
-cursor_fg= "#f0f2f5"
-selection_bg= "#dde3e9"
-selection_fg= "#f0f2f5"
+cursor_bg = "#1665aa"
+cursor_border = "#1665aa"
+cursor_fg= "#f9fafb"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#245b81"
 compose_cursor= "#7c4a1d"
 scrollbar_thumb= "#dde3e9"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#dde3e9'
-fg_color = '#40577a'
+fg_color = '#0861a0'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f0f2f5'
-fg_color = '#40577a'
+bg_color = '#dde3e9'
+fg_color = '#ab5807'
 intensity = 'Normal'
 italic = false
 strikethrough = false
