--- a/extras/wezterm/themes/light/1/oasis_night_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_night_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#52422d"
 background= "#e0dbcc"
-cursor_bg= "#7b410d"
-cursor_border= "#7b410d"
-cursor_fg= "#dbd5c2"
-selection_bg= "#cfc7af"
-selection_fg= "#dbd5c2"
+cursor_bg = "#7b410d"
+cursor_border = "#7b410d"
+cursor_fg= "#e0dbcc"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#742d2d"
 compose_cursor= "#613c17"
 scrollbar_thumb= "#cfc7af"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#cfc7af'
-fg_color = '#52422d'
+fg_color = '#8c1c1c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#dbd5c2'
-fg_color = '#52422d'
+bg_color = '#cfc7af'
+fg_color = '#ab5807'
 intensity = 'Normal'
 italic = false
 strikethrough = false
