--- a/extras/wezterm/themes/light/1/oasis_rose_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_rose_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#694e63"
 background= "#fbf9fb"
-cursor_bg= "#c3151c"
-cursor_border= "#c3151c"
-cursor_fg= "#f5f0f5"
-selection_bg= "#e9dde9"
-selection_fg= "#f5f0f5"
+cursor_bg = "#c3151c"
+cursor_border = "#c3151c"
+cursor_fg= "#fbf9fb"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#a32626"
 compose_cursor= "#6e5120"
 scrollbar_thumb= "#e9dde9"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e9dde9'
-fg_color = '#694e63'
+fg_color = '#a20707'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5f0f5'
-fg_color = '#694e63'
+bg_color = '#e9dde9'
+fg_color = '#a08e13'
 intensity = 'Normal'
 italic = false
 strikethrough = false
