--- a/extras/wezterm/themes/light/1/oasis_sol_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_sol_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#814236"
 background= "#f9f5f5"
-cursor_bg= "#b6282c"
-cursor_border= "#b6282c"
-cursor_fg= "#f3ebeb"
-selection_bg= "#e8d8d8"
-selection_fg= "#f3ebeb"
+cursor_bg = "#b6282c"
+cursor_border = "#b6282c"
+cursor_fg= "#f9f5f5"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#8f3838"
 compose_cursor= "#6c4f1f"
 scrollbar_thumb= "#e8d8d8"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8d8d8'
-fg_color = '#814236'
+fg_color = '#8c1c1c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f3ebeb'
-fg_color = '#814236'
+bg_color = '#e8d8d8'
+fg_color = '#ab5807'
 intensity = 'Normal'
 italic = false
 strikethrough = false
