--- a/extras/wezterm/themes/light/2/oasis_desert_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_desert_light_2.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#5f4e3b"
 background= "#f8f0e7"
-cursor_bg= "#695e19"
-cursor_border= "#695e19"
-cursor_fg= "#f5e9db"
-selection_bg= "#eedac3"
-selection_fg= "#f5e9db"
+cursor_bg = "#695e19"
+cursor_border = "#695e19"
+cursor_fg= "#f8f0e7"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#873838"
 compose_cursor= "#73471b"
 scrollbar_thumb= "#eedac3"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eedac3'
-fg_color = '#5f4e3b'
+fg_color = '#762828'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5e9db'
-fg_color = '#5f4e3b'
+bg_color = '#eedac3'
+fg_color = '#918517'
 intensity = 'Normal'
 italic = false
 strikethrough = false
