--- a/extras/wezterm/themes/light/2/oasis_lagoon_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_lagoon_light_2.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#3d5273"
 background= "#ebf1f9"
-cursor_bg= "#135fa2"
-cursor_border= "#135fa2"
-cursor_fg= "#dfe9f5"
-selection_bg= "#c8d8ee"
-selection_fg= "#dfe9f5"
+cursor_bg = "#135fa2"
+cursor_border = "#135fa2"
+cursor_fg= "#ebf1f9"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#205579"
 compose_cursor= "#75461b"
 scrollbar_thumb= "#c8d8ee"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#c8d8ee'
-fg_color = '#3d5273'
+fg_color = '#065c98'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#dfe9f5'
-fg_color = '#3d5273'
+bg_color = '#c8d8ee'
+fg_color = '#a35305'
 intensity = 'Normal'
 italic = false
 strikethrough = false
