--- a/extras/wezterm/themes/light/2/oasis_midnight_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_midnight_light_2.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#584f48"
 background= "#f8eee7"
-cursor_bg= "#b0272c"
-cursor_border= "#b0272c"
-cursor_fg= "#f5e6db"
-selection_bg= "#eed5c3"
-selection_fg= "#f5e6db"
+cursor_bg = "#b0272c"
+cursor_border = "#b0272c"
+cursor_fg= "#f8eee7"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#863838"
 compose_cursor= "#72461b"
 scrollbar_thumb= "#eed5c3"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eed5c3'
-fg_color = '#584f48'
+fg_color = '#762828'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5e6db'
-fg_color = '#584f48'
+bg_color = '#eed5c3'
+fg_color = '#a35405'
 intensity = 'Normal'
 italic = false
 strikethrough = false
