--- a/extras/wezterm/themes/light/2/oasis_starlight_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_starlight_light_2.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#5b5341"
 background= "#f9f5ec"
-cursor_bg= "#1462a7"
-cursor_border= "#1462a7"
-cursor_fg= "#f5efe0"
-selection_bg= "#eee3c9"
-selection_fg= "#f5efe0"
+cursor_bg = "#1462a7"
+cursor_border = "#1462a7"
+cursor_fg= "#f9f5ec"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#23587e"
 compose_cursor= "#77491c"
 scrollbar_thumb= "#eee3c9"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eee3c9'
-fg_color = '#5b5341'
+fg_color = '#075b98'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5efe0'
-fg_color = '#5b5341'
+bg_color = '#eee3c9'
+fg_color = '#928417'
 intensity = 'Normal'
 italic = false
 strikethrough = false
