--- a/extras/wezterm/themes/light/3/oasis_abyss_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_abyss_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#524b43"
 background= "#f7e5d4"
-cursor_bg= "#aa2126"
-cursor_border= "#aa2126"
-cursor_fg= "#f5ddc7"
-selection_bg= "#f0cead"
-selection_fg= "#f5ddc7"
+cursor_bg = "#aa2126"
+cursor_border = "#aa2126"
+cursor_fg= "#f7e5d4"
+selection_bg= "#e19d9d"
+selection_fg= "#4e0e0e"
 split= "#7e3535"
 compose_cursor= "#6e421b"
 scrollbar_thumb= "#f0cead"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#f0cead'
-fg_color = '#524b43'
+fg_color = '#702424'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5ddc7'
-fg_color = '#524b43'
+bg_color = '#f0cead'
+fg_color = '#9b4e03'
 intensity = 'Normal'
 italic = false
 strikethrough = false
