--- a/extras/wezterm/themes/light/3/oasis_cactus_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_cactus_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#405348"
 background= "#e0f0e7"
-cursor_bg= "#3a643d"
-cursor_border= "#3a643d"
-cursor_fg= "#d6ebdf"
-selection_bg= "#c1e1cf"
-selection_fg= "#d6ebdf"
+cursor_bg = "#3a643d"
+cursor_border = "#3a643d"
+cursor_fg= "#e0f0e7"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#3e543f"
 compose_cursor= "#6f451b"
 scrollbar_thumb= "#c1e1cf"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#c1e1cf'
-fg_color = '#405348'
+fg_color = '#346036'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#d6ebdf'
-fg_color = '#405348'
+bg_color = '#c1e1cf'
+fg_color = '#9b0303'
 intensity = 'Normal'
 italic = false
 strikethrough = false
