--- a/extras/wezterm/themes/light/3/oasis_midnight_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_midnight_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#524943"
 background= "#f7e2d4"
-cursor_bg= "#a52429"
-cursor_border= "#a52429"
-cursor_fg= "#f5d9c7"
-selection_bg= "#f0c8ad"
-selection_fg= "#f5d9c7"
+cursor_bg = "#a52429"
+cursor_border = "#a52429"
+cursor_fg= "#f7e2d4"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#7c3434"
 compose_cursor= "#6a411a"
 scrollbar_thumb= "#f0c8ad"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#f0c8ad'
-fg_color = '#524943'
+fg_color = '#702424'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5d9c7'
-fg_color = '#524943'
+bg_color = '#f0c8ad'
+fg_color = '#9b4f03'
 intensity = 'Normal'
 italic = false
 strikethrough = false
