--- a/extras/wezterm/themes/light/3/oasis_night_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_night_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#52412d"
 background= "#e6dbb2"
-cursor_bg= "#7c410d"
-cursor_border= "#7c410d"
-cursor_fg= "#e2d5a6"
-selection_bg= "#dbca8f"
-selection_fg= "#e2d5a6"
+cursor_bg = "#7c410d"
+cursor_border = "#7c410d"
+cursor_fg= "#e6dbb2"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#742d2d"
 compose_cursor= "#613c18"
 scrollbar_thumb= "#dbca8f"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#dbca8f'
-fg_color = '#52412d'
+fg_color = '#7d1717'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#e2d5a6'
-fg_color = '#52412d'
+bg_color = '#dbca8f'
+fg_color = '#9b4e03'
 intensity = 'Normal'
 italic = false
 strikethrough = false
