--- a/extras/wezterm/themes/light/3/oasis_starlight_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_starlight_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#564f3e"
 background= "#f4eddd"
-cursor_bg= "#135d9e"
-cursor_border= "#135d9e"
-cursor_fg= "#f0e7d1"
-selection_bg= "#e9dbba"
-selection_fg= "#f0e7d1"
+cursor_bg = "#135d9e"
+cursor_border = "#135d9e"
+cursor_fg= "#f4eddd"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#205378"
 compose_cursor= "#71451b"
 scrollbar_thumb= "#e9dbba"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e9dbba'
-fg_color = '#564f3e'
+fg_color = '#05558f'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f0e7d1'
-fg_color = '#564f3e'
+bg_color = '#e9dbba'
+fg_color = '#8a7d14'
 intensity = 'Normal'
 italic = false
 strikethrough = false
