--- a/extras/wezterm/themes/light/4/oasis_abyss_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_abyss_light_4.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#4e473f"
 background= "#f5ddc7"
-cursor_bg= "#a22024"
-cursor_border= "#a22024"
-cursor_fg= "#f3d5ba"
-selection_bg= "#eec5a0"
-selection_fg= "#f3d5ba"
+cursor_bg = "#a22024"
+cursor_border = "#a22024"
+cursor_fg= "#f5ddc7"
+selection_bg= "#e19d9d"
+selection_fg= "#4e0e0e"
 split= "#773232"
 compose_cursor= "#673e19"
 scrollbar_thumb= "#eec5a0"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eec5a0'
-fg_color = '#4e473f'
+fg_color = '#692121'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f3d5ba'
-fg_color = '#4e473f'
+bg_color = '#eec5a0'
+fg_color = '#924901'
 intensity = 'Normal'
 italic = false
 strikethrough = false
