--- a/extras/wezterm/themes/light/4/oasis_night_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_night_light_4.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#4f3f2b"
 background= "#e3d7aa"
-cursor_bg= "#773f0d"
-cursor_border= "#773f0d"
-cursor_fg= "#e0d19f"
-selection_bg= "#d8c688"
-selection_fg= "#e0d19f"
+cursor_bg = "#773f0d"
+cursor_border = "#773f0d"
+cursor_fg= "#e3d7aa"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#702b2b"
 compose_cursor= "#5d3a17"
 scrollbar_thumb= "#d8c688"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#d8c688'
-fg_color = '#4f3f2b'
+fg_color = '#751414'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#e0d19f'
-fg_color = '#4f3f2b'
+bg_color = '#d8c688'
+fg_color = '#924901'
 intensity = 'Normal'
 italic = false
 strikethrough = false
