--- a/extras/wezterm/themes/light/4/oasis_rose_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_rose_light_4.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#513d4b"
 background= "#f3ceea"
-cursor_bg= "#9f1116"
-cursor_border= "#9f1116"
-cursor_fg= "#f0c2e5"
-selection_bg= "#eaa9da"
-selection_fg= "#f0c2e5"
+cursor_bg = "#9f1116"
+cursor_border = "#9f1116"
+cursor_fg= "#f3ceea"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#7f1f1f"
 compose_cursor= "#563f19"
 scrollbar_thumb= "#eaa9da"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eaa9da'
-fg_color = '#513d4b'
+fg_color = '#880101'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f0c2e5'
-fg_color = '#513d4b'
+bg_color = '#eaa9da'
+fg_color = '#88790c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
