--- a/extras/wezterm/themes/light/4/oasis_starlight_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_starlight_light_4.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#524b3b"
 background= "#f0e6d1"
-cursor_bg= "#125a97"
-cursor_border= "#125a97"
-cursor_fg= "#ece0c5"
-selection_bg= "#e5d3ae"
-selection_fg= "#ece0c5"
+cursor_bg = "#125a97"
+cursor_border = "#125a97"
+cursor_fg= "#f0e6d1"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#1f4f71"
 compose_cursor= "#6b421a"
 scrollbar_thumb= "#e5d3ae"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e5d3ae'
-fg_color = '#524b3b'
+fg_color = '#035087'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#ece0c5'
-fg_color = '#524b3b'
+bg_color = '#e5d3ae'
+fg_color = '#827612'
 intensity = 'Normal'
 italic = false
 strikethrough = false
