--- a/extras/wezterm/themes/light/4/oasis_twilight_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_twilight_light_4.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#433a5c"
 background= "#d7cef3"
-cursor_bg= "#6914ba"
-cursor_border= "#6914ba"
-cursor_fg= "#cdc2f0"
-selection_bg= "#b9a9ea"
-selection_fg= "#cdc2f0"
+cursor_bg = "#6914ba"
+cursor_border = "#6914ba"
+cursor_fg= "#d7cef3"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#532784"
 compose_cursor= "#5a3716"
 scrollbar_thumb= "#b9a9ea"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#b9a9ea'
-fg_color = '#433a5c'
+fg_color = '#3f0188'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#cdc2f0'
-fg_color = '#433a5c'
+bg_color = '#b9a9ea'
+fg_color = '#827612'
 intensity = 'Normal'
 italic = false
 strikethrough = false
