--- a/extras/wezterm/themes/light/5/oasis_desert_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_desert_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#504132"
 background= "#f3d5ba"
-cursor_bg= "#595016"
-cursor_border= "#595016"
-cursor_fg= "#f1cdad"
-selection_bg= "#ecbd93"
-selection_fg= "#f1cdad"
+cursor_bg = "#595016"
+cursor_border = "#595016"
+cursor_fg= "#f3d5ba"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#712f2f"
 compose_cursor= "#603b17"
 scrollbar_thumb= "#ecbd93"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#ecbd93'
-fg_color = '#504132'
+fg_color = '#621e1e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f1cdad'
-fg_color = '#504132'
+bg_color = '#ecbd93'
+fg_color = '#7a6f10'
 intensity = 'Normal'
 italic = false
 strikethrough = false
