--- a/extras/wezterm/themes/light/5/oasis_night_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_night_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#4b3b28"
 background= "#e0cfa3"
-cursor_bg= "#713c0c"
-cursor_border= "#713c0c"
-cursor_fg= "#ddc998"
-selection_bg= "#d5bd81"
-selection_fg= "#ddc998"
+cursor_bg = "#713c0c"
+cursor_border = "#713c0c"
+cursor_fg= "#e0cfa3"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#6a2828"
 compose_cursor= "#573615"
 scrollbar_thumb= "#d5bd81"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#d5bd81'
-fg_color = '#4b3b28'
+fg_color = '#6e1212'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#ddc998'
-fg_color = '#4b3b28'
+bg_color = '#d5bd81'
+fg_color = '#8a4400'
 intensity = 'Normal'
 italic = false
 strikethrough = false
