--- a/extras/wezterm/themes/light/5/oasis_sol_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_sol_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#5b2e26"
 background= "#f3bfba"
-cursor_bg= "#871f20"
-cursor_border= "#871f20"
-cursor_fg= "#f1b3ad"
-selection_bg= "#ec9b93"
-selection_fg= "#f1b3ad"
+cursor_bg = "#871f20"
+cursor_border = "#871f20"
+cursor_fg= "#f3bfba"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#642626"
 compose_cursor= "#4b3715"
 scrollbar_thumb= "#ec9b93"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#ec9b93'
-fg_color = '#5b2e26'
+fg_color = '#6e1212'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f1b3ad'
-fg_color = '#5b2e26'
+bg_color = '#ec9b93'
+fg_color = '#8a4400'
 intensity = 'Normal'
 italic = false
 strikethrough = false
