--- a/extras/wezterm/themes/light/5/oasis_twilight_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_twilight_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#3b3351"
 background= "#cac2f0"
-cursor_bg= "#6012a9"
-cursor_border= "#6012a9"
-cursor_fg= "#bfb6ed"
-selection_bg= "#aa9de7"
-selection_fg= "#bfb6ed"
+cursor_bg = "#6012a9"
+cursor_border = "#6012a9"
+cursor_fg= "#cac2f0"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#492375"
 compose_cursor= "#4f3113"
 scrollbar_thumb= "#aa9de7"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#aa9de7'
-fg_color = '#3b3351'
+fg_color = '#3b0080'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#bfb6ed'
-fg_color = '#3b3351'
+bg_color = '#aa9de7'
+fg_color = '#7a6f0f'
 intensity = 'Normal'
 italic = false
 strikethrough = false
