--- a/extras/wezterm/themes/dark/oasis_abyss_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_abyss_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#F0EBE6"
 background= "#000000"
-cursor_bg= "#F58888"
-cursor_border= "#F58888"
-cursor_fg= "#080808"
-selection_bg= "#5A3824"
-selection_fg= "#080808"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#000000"
+selection_bg= "#532E2E"
+selection_fg= "#000000"
 split= "#D06666"
 compose_cursor= "#FF8A1F"
 scrollbar_thumb= "#1A1A1A"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#1A1A1A'
-fg_color = '#000000'
+fg_color = '#D06666'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#080808'
-fg_color = '#000000'
+bg_color = '#1A1A1A'
+fg_color = '#FFA247'
 intensity = 'Normal'
 italic = false
 strikethrough = false
