--- a/extras/wezterm/themes/dark/oasis_cactus_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_cactus_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#DDF0E5"
 background= "#1C261E"
-cursor_bg= "#AED6B0"
-cursor_border= "#AED6B0"
-cursor_fg= "#2C3A30"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#1C261E"
 selection_bg= "#5A3824"
-selection_fg= "#2C3A30"
+selection_fg= "#DDF0E5"
 split= "#7FBB82"
 compose_cursor= "#FFA247"
 scrollbar_thumb= "#3C4B3E"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#3C4B3E'
-fg_color = '#1C261E'
+fg_color = '#7FBB82'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#2C3A30'
-fg_color = '#1C261E'
+bg_color = '#3C4B3E'
+fg_color = '#FF8080'
 intensity = 'Normal'
 italic = false
 strikethrough = false
