--- a/extras/wezterm/themes/dark/oasis_lagoon_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_lagoon_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#D9E6FA"
 background= "#101825"
-cursor_bg= "#58B8FD"
-cursor_border= "#58B8FD"
-cursor_fg= "#1A283F"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#101825"
 selection_bg= "#5A3824"
-selection_fg= "#1A283F"
+selection_fg= "#D9E6FA"
 split= "#1CA0FD"
 compose_cursor= "#FF8A1F"
 scrollbar_thumb= "#22385C"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#22385C'
-fg_color = '#101825'
+fg_color = '#1CA0FD'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#1A283F'
-fg_color = '#101825'
+bg_color = '#22385C'
+fg_color = '#FFA247'
 intensity = 'Normal'
 italic = false
 strikethrough = false
