--- a/extras/wezterm/themes/dark/oasis_midnight_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_midnight_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#F7F4F2"
 background= "#101418"
-cursor_bg= "#F28D8D"
-cursor_border= "#F28D8D"
-cursor_fg= "#14181C"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#101418"
 selection_bg= "#5A3824"
-selection_fg= "#14181C"
+selection_fg= "#F7F4F2"
 split= "#D06666"
 compose_cursor= "#FFA247"
 scrollbar_thumb= "#1C242C"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#1C242C'
-fg_color = '#101418'
+fg_color = '#D06666'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#14181C'
-fg_color = '#101418'
+bg_color = '#1C242C'
+fg_color = '#FFA852'
 intensity = 'Normal'
 italic = false
 strikethrough = false
