--- a/extras/wezterm/themes/dark/oasis_night_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_night_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#F7F4E9"
 background= "#0D0D1A"
-cursor_bg= "#F58888"
-cursor_border= "#F58888"
-cursor_fg= "#06060E"
-selection_bg= "#3E2F4A"
-selection_fg= "#06060E"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#0D0D1A"
+selection_bg= "#5A3824"
+selection_fg= "#F7F4E9"
 split= "#D06666"
 compose_cursor= "#FFA247"
 scrollbar_thumb= "#262633"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#262633'
-fg_color = '#0D0D1A'
+fg_color = '#D06666'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#06060E'
-fg_color = '#0D0D1A'
+bg_color = '#262633'
+fg_color = '#FFA247'
 intensity = 'Normal'
 italic = false
 strikethrough = false
