--- a/extras/wezterm/themes/dark/oasis_sol_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_sol_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#FFE0DA"
 background= "#2F1815"
-cursor_bg= "#F39493"
-cursor_border= "#F39493"
-cursor_fg= "#3A2521"
-selection_bg= "#335668"
-selection_fg= "#3A2521"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#2F1815"
+selection_bg= "#5A3824"
+selection_fg= "#FFE0DA"
 split= "#E87272"
 compose_cursor= "#F49F15"
 scrollbar_thumb= "#4F312B"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#4F312B'
-fg_color = '#2F1815'
+fg_color = '#E87272'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#3A2521'
-fg_color = '#2F1815'
+bg_color = '#4F312B'
+fg_color = '#FFA247'
 intensity = 'Normal'
 italic = false
 strikethrough = false
