--- a/extras/wezterm/themes/dark/oasis_starlight_dark.toml
+++ b/extras/wezterm/themes/dark/oasis_starlight_dark.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#FAF7F0"
 background= "#000000"
-cursor_bg= "#58B8FD"
-cursor_border= "#58B8FD"
-cursor_fg= "#080808"
-selection_bg= "#4D4528"
-selection_fg= "#080808"
+cursor_bg = "#F0E68C"
+cursor_border = "#F0E68C"
+cursor_fg= "#000000"
+selection_bg= "#5A3824"
+selection_fg= "#FAF7F0"
 split= "#58B8FD"
 compose_cursor= "#FFA247"
 scrollbar_thumb= "#1A1A1A"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#1A1A1A'
-fg_color = '#000000'
+fg_color = '#58B8FD'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#080808'
-fg_color = '#000000'
+bg_color = '#1A1A1A'
+fg_color = '#F3EA9F'
 intensity = 'Normal'
 italic = false
 strikethrough = false
