--- a/extras/wezterm/themes/light/1/oasis_abyss_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_abyss_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#5c534b"
 background= "#f9f7f5"
-cursor_bg= "#bb2328"
-cursor_border= "#bb2328"
-cursor_fg= "#f3efeb"
-selection_bg= "#e8e0d8"
-selection_fg= "#f3efeb"
+cursor_bg = "#bb2328"
+cursor_border = "#bb2328"
+cursor_fg= "#f9f7f5"
+selection_bg= "#e19d9d"
+selection_fg= "#4e0e0e"
 split= "#8d3b3b"
 compose_cursor= "#7a491d"
 scrollbar_thumb= "#e8e0d8"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8e0d8'
-fg_color = '#5c534b'
+fg_color = '#7d2b2b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f3efeb'
-fg_color = '#5c534b'
+bg_color = '#e8e0d8'
+fg_color = '#ab5807'
 intensity = 'Normal'
 italic = false
 strikethrough = false
