--- a/extras/wezterm/themes/light/1/oasis_desert_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_desert_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#63523d"
 background= "#f9f7f5"
-cursor_bg= "#6d6119"
-cursor_border= "#6d6119"
-cursor_fg= "#f3efeb"
-selection_bg= "#e8e0d8"
-selection_fg= "#f3efeb"
+cursor_bg = "#6d6119"
+cursor_border = "#6d6119"
+cursor_fg= "#f9f7f5"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#8d3b3b"
 compose_cursor= "#794a1c"
 scrollbar_thumb= "#e8e0d8"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8e0d8'
-fg_color = '#63523d'
+fg_color = '#7d2b2b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f3efeb'
-fg_color = '#63523d'
+bg_color = '#e8e0d8'
+fg_color = '#988c1a'
 intensity = 'Normal'
 italic = false
 strikethrough = false
