--- a/extras/wezterm/themes/light/1/oasis_dune_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_dune_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#58554c"
 background= "#f9f8f5"
-cursor_bg= "#6d6219"
-cursor_border= "#6d6219"
-cursor_fg= "#f3f1eb"
-selection_bg= "#e8e4d8"
-selection_fg= "#f3f1eb"
+cursor_bg = "#6d6219"
+cursor_border = "#6d6219"
+cursor_fg= "#f9f8f5"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#58563c"
 compose_cursor= "#794a1c"
 scrollbar_thumb= "#e8e4d8"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8e4d8'
-fg_color = '#58554c'
+fg_color = '#726d36'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f3f1eb'
-fg_color = '#58554c'
+bg_color = '#e8e4d8'
+fg_color = '#3e7540'
 intensity = 'Normal'
 italic = false
 strikethrough = false
