--- a/extras/wezterm/themes/light/1/oasis_midnight_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_midnight_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#5c534c"
 background= "#f9f6f5"
-cursor_bg= "#b7292e"
-cursor_border= "#b7292e"
-cursor_fg= "#f3edeb"
-selection_bg= "#e8dcd8"
-selection_fg= "#f3edeb"
+cursor_bg = "#b7292e"
+cursor_border = "#b7292e"
+cursor_fg= "#f9f6f5"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#8c3a3a"
 compose_cursor= "#784a1c"
 scrollbar_thumb= "#e8dcd8"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8dcd8'
-fg_color = '#5c534c'
+fg_color = '#7d2b2b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f3edeb'
-fg_color = '#5c534c'
+bg_color = '#e8dcd8'
+fg_color = '#ab5907'
 intensity = 'Normal'
 italic = false
 strikethrough = false
