--- a/extras/wezterm/themes/light/1/oasis_mirage_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_mirage_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#455b5b"
 background= "#f9fbfa"
-cursor_bg= "#356c63"
-cursor_border= "#356c63"
-cursor_fg= "#f0f5f2"
-selection_bg= "#dde9e3"
-selection_fg= "#f0f5f2"
+cursor_bg = "#356c63"
+cursor_border = "#356c63"
+cursor_fg= "#f9fbfa"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#395d58"
 compose_cursor= "#7b4b1d"
 scrollbar_thumb= "#dde9e3"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#dde9e3'
-fg_color = '#455b5b'
+fg_color = '#34746c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f0f5f2'
-fg_color = '#455b5b'
+bg_color = '#dde9e3'
+fg_color = '#ab5807'
 intensity = 'Normal'
 italic = false
 strikethrough = false
