--- a/extras/wezterm/themes/light/1/oasis_starlight_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_starlight_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#5c5442"
 background= "#f9f7f5"
-cursor_bg= "#1563a7"
-cursor_border= "#1563a7"
-cursor_fg= "#f3efeb"
-selection_bg= "#e8e0d8"
-selection_fg= "#f3efeb"
+cursor_bg = "#1563a7"
+cursor_border = "#1563a7"
+cursor_fg= "#f9f7f5"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#23597f"
 compose_cursor= "#794a1c"
 scrollbar_thumb= "#e8e0d8"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8e0d8'
-fg_color = '#5c5442'
+fg_color = '#0961a0'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f3efeb'
-fg_color = '#5c5442'
+bg_color = '#e8e0d8'
+fg_color = '#998b19'
 intensity = 'Normal'
 italic = false
 strikethrough = false
