--- a/extras/wezterm/themes/light/1/oasis_twilight_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_twilight_light_1.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#5b4f7e"
 background= "#f9f9fb"
-cursor_bg= "#8724e7"
-cursor_border= "#8724e7"
-cursor_fg= "#f0f0f5"
-selection_bg= "#dddde9"
-selection_fg= "#f0f0f5"
+cursor_bg = "#8724e7"
+cursor_border = "#8724e7"
+cursor_fg= "#f9f9fb"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#6f35b4"
 compose_cursor= "#7a4b1d"
 scrollbar_thumb= "#dddde9"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#dddde9'
-fg_color = '#5b4f7e'
+fg_color = '#4e07a2'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f0f0f5'
-fg_color = '#5b4f7e'
+bg_color = '#dddde9'
+fg_color = '#998b19'
 intensity = 'Normal'
 italic = false
 strikethrough = false
