--- a/extras/wezterm/themes/light/2/oasis_canyon_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_canyon_light_2.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#624e35"
 background= "#f8f0e7"
-cursor_bg= "#8f4c10"
-cursor_border= "#8f4c10"
-cursor_fg= "#f5e9db"
-selection_bg= "#eedac3"
-selection_fg= "#f5e9db"
+cursor_bg = "#8f4c10"
+cursor_border = "#8f4c10"
+cursor_fg= "#f8f0e7"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#73471b"
 compose_cursor= "#5b5120"
 scrollbar_thumb= "#eedac3"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eedac3'
-fg_color = '#624e35'
+fg_color = '#994e05'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5e9db'
-fg_color = '#624e35'
+bg_color = '#eedac3'
+fg_color = '#1c6c8d'
 intensity = 'Normal'
 italic = false
 strikethrough = false
