--- a/extras/wezterm/themes/light/2/oasis_dune_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_dune_light_2.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#57544b"
 background= "#f9f6ec"
-cursor_bg= "#6b611a"
-cursor_border= "#6b611a"
-cursor_fg= "#f5f0e0"
-selection_bg= "#eee5c9"
-selection_fg= "#f5f0e0"
+cursor_bg = "#6b611a"
+cursor_border = "#6b611a"
+cursor_fg= "#f9f6ec"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#57553b"
 compose_cursor= "#77491c"
 scrollbar_thumb= "#eee5c9"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eee5c9'
-fg_color = '#57544b'
+fg_color = '#6c6733'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5f0e0'
-fg_color = '#57544b'
+bg_color = '#eee5c9'
+fg_color = '#3a6f3c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
