--- a/extras/wezterm/themes/light/2/oasis_mirage_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_mirage_light_2.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#425858"
 background= "#ebf9f9"
-cursor_bg= "#356962"
-cursor_border= "#356962"
-cursor_fg= "#dff5f5"
-selection_bg= "#c8eeee"
-selection_fg= "#dff5f5"
+cursor_bg = "#356962"
+cursor_border = "#356962"
+cursor_fg= "#ebf9f9"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#375b55"
 compose_cursor= "#774a1c"
 scrollbar_thumb= "#c8eeee"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#c8eeee'
-fg_color = '#425858'
+fg_color = '#316e66'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#dff5f5'
-fg_color = '#425858'
+bg_color = '#c8eeee'
+fg_color = '#a35305'
 intensity = 'Normal'
 italic = false
 strikethrough = false
