--- a/extras/wezterm/themes/light/2/oasis_rose_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_rose_light_2.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#61495c"
 background= "#f9ecf5"
-cursor_bg= "#b8141b"
-cursor_border= "#b8141b"
-cursor_fg= "#f5e0ef"
-selection_bg= "#eec9e3"
-selection_fg= "#f5e0ef"
+cursor_bg = "#b8141b"
+cursor_border = "#b8141b"
+cursor_fg= "#f9ecf5"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#982424"
 compose_cursor= "#684c1d"
 scrollbar_thumb= "#eec9e3"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eec9e3'
-fg_color = '#61495c'
+fg_color = '#990505'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5e0ef'
-fg_color = '#61495c'
+bg_color = '#eec9e3'
+fg_color = '#988710'
 intensity = 'Normal'
 italic = false
 strikethrough = false
