--- a/extras/wezterm/themes/light/2/oasis_twilight_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_twilight_light_2.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#544975"
 background= "#efecf9"
-cursor_bg= "#7f18e1"
-cursor_border= "#7f18e1"
-cursor_fg= "#e5e0f5"
-selection_bg= "#d2c9ee"
-selection_fg= "#e5e0f5"
+cursor_bg = "#7f18e1"
+cursor_border = "#7f18e1"
+cursor_fg= "#efecf9"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#6732a6"
 compose_cursor= "#71451a"
 scrollbar_thumb= "#d2c9ee"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#d2c9ee'
-fg_color = '#544975'
+fg_color = '#490599'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#e5e0f5'
-fg_color = '#544975'
+bg_color = '#d2c9ee'
+fg_color = '#928417'
 intensity = 'Normal'
 italic = false
 strikethrough = false
