--- a/extras/wezterm/themes/light/3/oasis_canyon_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_canyon_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#5d4a33"
 background= "#f7e7d4"
-cursor_bg= "#89480f"
-cursor_border= "#89480f"
-cursor_fg= "#f5e0c7"
-selection_bg= "#f0d1ad"
-selection_fg= "#f5e0c7"
+cursor_bg = "#89480f"
+cursor_border = "#89480f"
+cursor_fg= "#f7e7d4"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#6d431a"
 compose_cursor= "#564d1e"
 scrollbar_thumb= "#f0d1ad"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#f0d1ad'
-fg_color = '#5d4a33'
+fg_color = '#914903'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5e0c7'
-fg_color = '#5d4a33'
+bg_color = '#f0d1ad'
+fg_color = '#196685'
 intensity = 'Normal'
 italic = false
 strikethrough = false
