--- a/extras/wezterm/themes/light/3/oasis_desert_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_desert_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#5a4a38"
 background= "#f7e7d4"
-cursor_bg= "#645918"
-cursor_border= "#645918"
-cursor_fg= "#f5e0c7"
-selection_bg= "#f0d1ad"
-selection_fg= "#f5e0c7"
+cursor_bg = "#645918"
+cursor_border = "#645918"
+cursor_fg= "#f7e7d4"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#7f3535"
 compose_cursor= "#6d431a"
 scrollbar_thumb= "#f0d1ad"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#f0d1ad'
-fg_color = '#5a4a38'
+fg_color = '#702424'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5e0c7'
-fg_color = '#5a4a38'
+bg_color = '#f0d1ad'
+fg_color = '#897e15'
 intensity = 'Normal'
 italic = false
 strikethrough = false
