--- a/extras/wezterm/themes/light/3/oasis_dune_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_dune_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#525047"
 background= "#f4efdd"
-cursor_bg= "#685c19"
-cursor_border= "#685c19"
-cursor_fg= "#f0ead1"
-selection_bg= "#e9dfba"
-selection_fg= "#f0ead1"
+cursor_bg = "#685c19"
+cursor_border = "#685c19"
+cursor_fg= "#f4efdd"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#535139"
 compose_cursor= "#71461c"
 scrollbar_thumb= "#e9dfba"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e9dfba'
-fg_color = '#525047'
+fg_color = '#65612f'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f0ead1'
-fg_color = '#525047'
+bg_color = '#e9dfba'
+fg_color = '#366838'
 intensity = 'Normal'
 italic = false
 strikethrough = false
