--- a/extras/wezterm/themes/light/3/oasis_sol_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_sol_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#6d382e"
 background= "#f7d9d4"
-cursor_bg= "#9f2326"
-cursor_border= "#9f2326"
-cursor_fg= "#f5cec7"
-selection_bg= "#f0b7ad"
-selection_fg= "#f5cec7"
+cursor_bg = "#9f2326"
+cursor_border = "#9f2326"
+cursor_fg= "#f7d9d4"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#792f2f"
 compose_cursor= "#5c431a"
 scrollbar_thumb= "#f0b7ad"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#f0b7ad'
-fg_color = '#6d382e'
+fg_color = '#7d1717'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f5cec7'
-fg_color = '#6d382e'
+bg_color = '#f0b7ad'
+fg_color = '#9b4e03'
 intensity = 'Normal'
 italic = false
 strikethrough = false
