--- a/extras/wezterm/themes/light/3/oasis_twilight_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_twilight_light_3.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#4a4268"
 background= "#e2ddf4"
-cursor_bg= "#7416cd"
-cursor_border= "#7416cd"
-cursor_fg= "#d8d1f0"
-selection_bg= "#c4bae9"
-selection_fg= "#d8d1f0"
+cursor_bg = "#7416cd"
+cursor_border = "#7416cd"
+cursor_fg= "#e2ddf4"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#5d2c96"
 compose_cursor= "#653f19"
 scrollbar_thumb= "#c4bae9"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#c4bae9'
-fg_color = '#4a4268'
+fg_color = '#440391'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#d8d1f0'
-fg_color = '#4a4268'
+bg_color = '#c4bae9'
+fg_color = '#8a7d14'
 intensity = 'Normal'
 italic = false
 strikethrough = false
