--- a/extras/wezterm/themes/light/4/oasis_cactus_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_cactus_light_4.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#405147"
 background= "#d6f0e1"
-cursor_bg= "#3a623c"
-cursor_border= "#3a623c"
-cursor_fg= "#cbecd9"
-selection_bg= "#b4e4c8"
-selection_fg= "#cbecd9"
+cursor_bg = "#3a623c"
+cursor_border = "#3a623c"
+cursor_fg= "#d6f0e1"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#3d523e"
 compose_cursor= "#6d431b"
 scrollbar_thumb= "#b4e4c8"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#b4e4c8'
-fg_color = '#405147'
+fg_color = '#305a32'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#cbecd9'
-fg_color = '#405147'
+bg_color = '#b4e4c8'
+fg_color = '#920101'
 intensity = 'Normal'
 italic = false
 strikethrough = false
