--- a/extras/wezterm/themes/light/4/oasis_dune_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_dune_light_4.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#4f4d44"
 background= "#f0e9d1"
-cursor_bg= "#635918"
-cursor_border= "#635918"
-cursor_fg= "#ece3c5"
-selection_bg= "#e5d8ae"
-selection_fg= "#ece3c5"
+cursor_bg = "#635918"
+cursor_border = "#635918"
+cursor_fg= "#f0e9d1"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#504d36"
 compose_cursor= "#6d431a"
 scrollbar_thumb= "#e5d8ae"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e5d8ae'
-fg_color = '#4f4d44'
+fg_color = '#5f5b2b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#ece3c5'
-fg_color = '#4f4d44'
+bg_color = '#e5d8ae'
+fg_color = '#326234'
 intensity = 'Normal'
 italic = false
 strikethrough = false
