--- a/extras/wezterm/themes/light/4/oasis_lagoon_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_lagoon_light_4.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#334561"
 background= "#c9dcf7"
-cursor_bg= "#11528a"
-cursor_border= "#11528a"
-cursor_fg= "#bcd3f5"
-selection_bg= "#a1c2f1"
-selection_fg= "#bcd3f5"
+cursor_bg = "#11528a"
+cursor_border = "#11528a"
+cursor_fg= "#c9dcf7"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#1c4766"
 compose_cursor= "#613b18"
 scrollbar_thumb= "#a1c2f1"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#a1c2f1'
-fg_color = '#334561'
+fg_color = '#035087'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#bcd3f5'
-fg_color = '#334561'
+bg_color = '#a1c2f1'
+fg_color = '#924901'
 intensity = 'Normal'
 italic = false
 strikethrough = false
