--- a/extras/wezterm/themes/light/4/oasis_mirage_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_mirage_light_4.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#3e5252"
 background= "#cdf4f4"
-cursor_bg= "#31635c"
-cursor_border= "#31635c"
-cursor_fg= "#c0f1f1"
-selection_bg= "#a7ecec"
-selection_fg= "#c0f1f1"
+cursor_bg = "#31635c"
+cursor_border = "#31635c"
+cursor_fg= "#cdf4f4"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#345550"
 compose_cursor= "#70451b"
 scrollbar_thumb= "#a7ecec"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#a7ecec'
-fg_color = '#3e5252'
+fg_color = '#29615a'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#c0f1f1'
-fg_color = '#3e5252'
+bg_color = '#a7ecec'
+fg_color = '#924901'
 intensity = 'Normal'
 italic = false
 strikethrough = false
