--- a/extras/wezterm/themes/light/5/oasis_abyss_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_abyss_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#48413b"
 background= "#f3d2ba"
-cursor_bg= "#981e22"
-cursor_border= "#981e22"
-cursor_fg= "#f1c9ad"
-selection_bg= "#ecb893"
-selection_fg= "#f1c9ad"
+cursor_bg = "#981e22"
+cursor_border = "#981e22"
+cursor_fg= "#f3d2ba"
+selection_bg= "#e19d9d"
+selection_fg= "#4e0e0e"
 split= "#6f2e2e"
 compose_cursor= "#5f3a17"
 scrollbar_thumb= "#ecb893"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#ecb893'
-fg_color = '#48413b'
+fg_color = '#621e1e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f1c9ad'
-fg_color = '#48413b'
+bg_color = '#ecb893'
+fg_color = '#8a4400'
 intensity = 'Normal'
 italic = false
 strikethrough = false
