--- a/extras/wezterm/themes/light/5/oasis_canyon_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_canyon_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#52412d"
 background= "#f3d5ba"
-cursor_bg= "#7a410d"
-cursor_border= "#7a410d"
-cursor_fg= "#f1cdad"
-selection_bg= "#ecbd93"
-selection_fg= "#f1cdad"
+cursor_bg = "#7a410d"
+cursor_border = "#7a410d"
+cursor_fg= "#f3d5ba"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#603b17"
 compose_cursor= "#4b441a"
 scrollbar_thumb= "#ecbd93"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#ecbd93'
-fg_color = '#52412d'
+fg_color = '#803f00'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f1cdad'
-fg_color = '#52412d'
+bg_color = '#ecbd93'
+fg_color = '#145a76'
 intensity = 'Normal'
 italic = false
 strikethrough = false
