--- a/extras/wezterm/themes/light/5/oasis_dune_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_dune_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#4a4940"
 background= "#ece1c6"
-cursor_bg= "#5e5517"
-cursor_border= "#5e5517"
-cursor_fg= "#e8dbbb"
-selection_bg= "#e1cfa4"
-selection_fg= "#e8dbbb"
+cursor_bg = "#5e5517"
+cursor_border = "#5e5517"
+cursor_fg= "#ece1c6"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#4b4934"
 compose_cursor= "#673f19"
 scrollbar_thumb= "#e1cfa4"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e1cfa4'
-fg_color = '#4a4940'
+fg_color = '#585527'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#e8dbbb'
-fg_color = '#4a4940'
+bg_color = '#e1cfa4'
+fg_color = '#2e5c30'
 intensity = 'Normal'
 italic = false
 strikethrough = false
