--- a/extras/wezterm/themes/light/5/oasis_lagoon_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_lagoon_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#30405b"
 background= "#bcd6f5"
-cursor_bg= "#104d84"
-cursor_border= "#104d84"
-cursor_fg= "#afcef3"
-selection_bg= "#94beef"
-selection_fg= "#afcef3"
+cursor_bg = "#104d84"
+cursor_border = "#104d84"
+cursor_fg= "#bcd6f5"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#1a435f"
 compose_cursor= "#5b3716"
 scrollbar_thumb= "#94beef"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#94beef'
-fg_color = '#30405b'
+fg_color = '#014b7e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#afcef3'
-fg_color = '#30405b'
+bg_color = '#94beef'
+fg_color = '#8a4400'
 intensity = 'Normal'
 italic = false
 strikethrough = false
