--- a/extras/wezterm/themes/light/5/oasis_mirage_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_mirage_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#3c5050"
 background= "#c0f2ee"
-cursor_bg= "#31605a"
-cursor_border= "#31605a"
-cursor_fg= "#b3efeb"
-selection_bg= "#9aeae4"
-selection_fg= "#b3efeb"
+cursor_bg = "#31605a"
+cursor_border = "#31605a"
+cursor_fg= "#c0f2ee"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#32524d"
 compose_cursor= "#6c431a"
 scrollbar_thumb= "#9aeae4"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#9aeae4'
-fg_color = '#3c5050'
+fg_color = '#265a53'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#b3efeb'
-fg_color = '#3c5050'
+bg_color = '#9aeae4'
+fg_color = '#8a4400'
 intensity = 'Normal'
 italic = false
 strikethrough = false
