--- a/extras/wezterm/themes/light/5/oasis_rose_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_rose_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#4a3845"
 background= "#f0c2e7"
-cursor_bg= "#941015"
-cursor_border= "#941015"
-cursor_fg= "#edb6e2"
-selection_bg= "#e79dd9"
-selection_fg= "#edb6e2"
+cursor_bg = "#941015"
+cursor_border = "#941015"
+cursor_fg= "#f0c2e7"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#751c1c"
 compose_cursor= "#4f3a16"
 scrollbar_thumb= "#e79dd9"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e79dd9'
-fg_color = '#4a3845'
+fg_color = '#800000'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#edb6e2'
-fg_color = '#4a3845'
+bg_color = '#e79dd9'
+fg_color = '#80710a'
 intensity = 'Normal'
 italic = false
 strikethrough = false
