--- a/extras/wezterm/themes/light/5/oasis_starlight_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_starlight_light_5.toml
@@ -5,11 +5,11 @@
 [colors]
 foreground = "#4d4738"
 background= "#f3deba"
-cursor_bg= "#125592"
-cursor_border= "#125592"
-cursor_fg= "#f1d8ad"
-selection_bg= "#eccb93"
-selection_fg= "#f1d8ad"
+cursor_bg = "#125592"
+cursor_border = "#125592"
+cursor_fg= "#f3deba"
+selection_bg= "#e1b69d"
+selection_fg= "#4e260e"
 split= "#1e4b6c"
 compose_cursor= "#663f19"
 scrollbar_thumb= "#eccb93"
@@ -55,15 +55,15 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eccb93'
-fg_color = '#4d4738'
+fg_color = '#024a7e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
 underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = '#f1d8ad'
-fg_color = '#4d4738'
+bg_color = '#eccb93'
+fg_color = '#7a6f0f'
 intensity = 'Normal'
 italic = false
 strikethrough = false
